refactor: update package.json and tsconfig.json for module support; adjust import paths to include file extensions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,8 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
     "strictBindCallApply": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true
   }
 }
