--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@octokit/graphql": "^9.0.3",
     "cache-manager": "^7.2.7",
     "cache-manager-ioredis-yet": "^2.1.2",
+    "express": "^5.2.1",
     "graphql": "^16.12.0",
     "ioredis": "^5.8.2",
     "reflect-metadata": "^0.2.2",
